<resources>
    <string name="app_name">fundmental</string>
    <string name="groups_btn_pages">450 pages</string>
    <string name="groups_btn_finish">450 finish</string>
    <string name="groups_et_search_hint">Search for group</string>
    <string name="groups_et_search_hint2">Enter a group ID to search for ask ID from group admin </string>
    <string name="groups_username">user name </string>
    <string name="groups_creatnewgroup">Creat new Group </string>
</resources>
