<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/groups_layout_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        app:srcCompat="@drawable/boss"
        android:background="@drawable/group_person_shap"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_username"
        android:textSize="@dimen/textSize_username"
        android:textStyle="bold"
        android:padding="@dimen/padding_username"
        android:text="@string/groups_username" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_linearlayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_textview2"
            android:padding="@dimen/padding_textview2"
            android:text="@string/groups_btn_pages"
            android:background="@drawable/group_textview_shap"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_textview3"
            android:padding="@dimen/layout_margin_textview3"
            android:text="@string/groups_btn_finish"
            android:background="@drawable/group_textview_shap"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_textview6"
        android:text="@string/groups_et_search_hint" />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_marginHorizontal_textview5"
        android:background="@drawable/group_edittext_search"
        android:padding="@dimen/padding_textview5"
        android:drawableStart="@drawable/ic_search"
        android:layout_marginVertical="@dimen/layout_marginVertical_textview5"
        android:drawablePadding="5dp"
        android:ems="10"
        android:text="@string/groups_et_search_hint"
        android:textColor="@color/groups_editText_hintColor" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/textview_marfintop"
        android:textColor="@color/groups_textView_textColor"
        android:text="@string/groups_et_search_hint2" />

    <TextView
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_textview7"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/groups_textView_creatGroup_textColor"
        android:text="@string/groups_creatnewgroup" />



</LinearLayout>